# openvinoopencvsharp

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE.txt  OpenVinoOpenCvSharp.sln  build.bat
Docker/: build.sh  variables.ps1  variables.sh
Docker/debian-buster-arm32v7/: Dockerfile  build.ps1  (+1 more)
Docker/debian-buster-arm32v7-opencv/: Dockerfile  build.ps1  build.sh
Docker/debian-buster-arm32v7-opencv-openvino/: .dockerignore  Dockerfile  build.sh
Docker/openvinocvsharp/: .dockerignore  CMakeLists.txt  Dockerfile  OpenCvSharp.csproj  build.ps1  build.sh
FaceDetectionOpenVino/: CaffeDnnFaceDetector.cs  Dockerfile.arm32v7  FaceDetectionOpenVino.csproj  InferenceEngineDetector.cs  Program.cs  TinyYoloV3Detector.cs  build.arm32v7.sh
OpenVinoOpenCvSharp/: OpenVinoOpenCvSharp.csproj  build.ps1
OpenVinoOpenCvSharpExtern/: CMakeLists.txt  core.cpp  core.h  core_Algorithm.h  core_FileNode.h  core_FileStorage.h  core_InputArray.h  core_LDA.h  core_Mat.h  core_MatExpr.h  core_OutputArray.h  core_PCA.h  core_RNG.h  core_SVD.h  core_SparseMat.h  dnn.cpp  dnn.h  dnn_Net.h  include_opencv.h  my_functions.h  my_types.h  std_string.cpp  std_string.h  std_vector.h
PeopleDetectionOpenCV/: AssemblyLoadConfiguration.cs  CaffeDnnFaceDetector.cs  Detector.cs  Dockerfile  PeopleDetectionOpenCV.csproj  Program.cs  TensorFlowDnnFaceDetector.cs  build.ps1  run.bat  run.sh
Shared/: CaffeDnnFaceDetector.cs  Converter.cs  DataTransfer.cs  Decoder.cs  Extensions.cs  FFmpegHelper.cs  IDetector.cs  InferenceEngineDetector.cs  MatAndBuffer.cs  Shared.csproj  TinyYoloV3Detector.cs
StandaloneFaceDetection/: Dockerfile  Program.cs  StandaloneFaceDetection.csproj  build.ps1  build.sh
(+348 files in other folders)
